0.3.0
    - Handle the CAPAB IDENTIFY-MSG feature smoothly
    - Make recall keep track of channel topic changes
    - Remove a debugging print statement, doh
    - Should detach from the terminal now when using --debug
    - Moved 'bondage' from bin/ to script/ since it's not a binary
    - Prettified some of the pod
    - Exit cleanly upon getting SIGINT when clients are attached
    - Fix bug in 99-test-pod.t

0.2.5 Tue Mar 11 01:42:08 GMT 2008
    - Fix PM recalling
    - Enable plugin_debug in PoCo::IRC when debugging
    - A few pod fixes
    - Fix MANIFEST

0.2.4 Mon Feb 11 04:33:05 GMT 2008
    - Fix topic recalling
    - Add log_rotate/log_sortbydate
    - Move channel cycling to POE::Component::IRC
    - Use Config::Any instead of YAML::Syck
    - Exit (almost) cleanly when sent TERM/INT signals
    - Rename auto_cycle option to cycle_empty

0.2.3 Wed Jan 30 05:01:30 GMT 2008
    - Fix silly versioning blunder

0.2.2 Wed Jan 30 04:18:26 GMT 2008
    - Reorganized pod
    - Fixed Cycle.pm

0.2.1 Mon Jan 28 10:14:17 GMT 2008
    - Pod fixes

0.2.0 Mon Jan 28 06:24:13 GMT 2008
    - Uploaded to CPAN as App::Bondage
    - Moved most features into separate PoCo-IRC plugins
    - Rewrote a lot of stuff

0.1.1 Mon Jan 14 08:33:22 GMT 2008
    - A change log!
    - Fix ignoring WHO replies requested by PoCo::IRC::State
    - Fix auto away not working properly when reconnecting
    - Require POE-Component-IRC 5.52, so that CTCP commands
      (/me and the like) will be forwarded