@@ -14,6 +14,7 @@ WriteMakefile(
         'POE::Component::IRC'         => '5.84',
         'POE::Filter::IRCD'           => '2.34',
         'Config::Any'                 => '0.11',
+        'File::Spec'                  => '0',
         'File::Temp'                  => '0',
         'Tie::File'                   => '0',
         'Carp'                        => '0',
